usercontroller is completed

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_DB_URI=mongodb+srv://rajasekharb5401:GXO0W5t1bkZ0vJBv@cluster0.jdup8xn.mongodb.net/Image_Generator?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=secretkey
